# OpenGL-CMake-Template

./: BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
